# mkv-chapter-helper

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
samples/: chaptergrabber_names.xml  chaptergrabber_timecodes.xml  matroska_names.xml  matroska_timecodes.xml  mediainfo_names.txt  mediainfo_timecodes.txt  ogm_names.txt  ogm_timecodes.txt  sample_names.mkv  sample_timecodes.mkv
scripts/: main.py
src/mkv_chapter_helper/: cli.py  main.py  processing.py  utils.py
