[project]
name = "mkv-chapter-helper"
version = "1.0"
description = "Embed chapters into an MKV file with the ability to mix timecodes and chapter names from multiple sources."
readme = "README.md"
authors = [
    { name = "nateify", email = "nateify@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = []
classifiers = [
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
mkv-chapter-helper = "mkv_chapter_helper.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py313"
line-length = 120
